--- a/src/components/banner/style.scss
+++ b/src/components/banner/style.scss
@@ -48,7 +48,7 @@
             &::after {
                 transform: translateX(0px);
                 width: 100%;
-                background: linear-gradient(0deg, #A02A23 0%, rgba(160, 42, 35, 0) 100%);
+                background: linear-gradient(0deg, #7367F0 0%, rgba(115, 103, 240, 0) 100%);
                 top: 0px;
                 transform: translateY(calc(-100% + 2px));
                 height: 220px;
